--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 	<!-- Preload -->
-	<!-- <link rel="preload" as="image" href="./assets/images/icon_camera.webp"> -->
 	<link rel="preload" as="image" href="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp">
 	<link rel="preload" as="image" href="./assets/images/slider/crowd_happy_nicholas-green-1400.webp">
 	<link rel="preload" as="image" href="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp">
 
-	<!-- <link rel="icon" type="image/x-icon" href="/assets/images/icon_camera.webp"> -->
+	<link rel="icon" type="image/x-icon" href="/assets/images/icon_camera.webp">
 
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
