--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<link rel="preload" as="image" href="./assets/images/slider/crowd_happy_nicholas-green-1400.webp">
 	<link rel="preload" as="image" href="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp">
 
-	<link rel="icon" type="image/x-icon" href="/assets/images/icon_camera.webp">
-
+	<link rel="icon" href="./assets/images/favicon.ico">
+	
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
@@ -161,17 +161,17 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img src="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp" srcset="./assets/images/slider/business_man_xing_ryoji-iwata-1400.webp 1400w,
-						./assets/images/slider/business_man_xing_ryoji-iwata.webp-700 700w" sizes="100vw" class="d-block w-100"
+						./assets/images/slider/business_man_xing_ryoji-iwata.webp-700 700w" sizes="100vw" class="d-block w-100 h-100"
 							alt="businessman traverse la rue">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/crowd_happy_nicholas-green-1400.webp" srcset="./assets/images/slider/crowd_happy_nicholas-green-1400.webp 1400w,
-						./assets/images/slider/crowd_happy_nicholas-green-700.webp 700w" sizes="100vw" class="d-block w-100"
+						./assets/images/slider/crowd_happy_nicholas-green-700.webp 700w" sizes="100vw" class="d-block w-100 h-100"
 							alt="danse des mariés">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp" srcset="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp 1400w,
-						./assets/images/slider/wedding_dance_edward-cisneros-700 700w" sizes="100vw" class="d-block w-100"
+						./assets/images/slider/wedding_dance_edward-cisneros-700 700w" sizes="100vw" class="d-block w-100 h-100"
 							alt="danse des mariés">
 					</div>
 				</div>
