--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="preload" as="image" href="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp">
 
 	<link rel="icon" href="./assets/images/favicon.ico">
-	
+
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
@@ -41,7 +41,7 @@
 			"name": "Nina Carducci",
 			"description": "Nina Carducci, photographe professionnelle à Bordeaux",
 			"image": "https://jackvpt.github.io/Nina-Carducci-Dev/assets/images/portrait_nina_carducci.jpg",
-			"url": "https://nina-carducci-photographe.fr/",
+			"url": "https://jackvpt.github.io/Nina-Carducci-Dev/",
 			"address": {
 				"@type": "PostalAddress",
 				"streetAddress": "68 avenue Alsace-Lorraine",
@@ -167,12 +167,12 @@
 					<div class="carousel-item">
 						<img src="./assets/images/slider/crowd_happy_nicholas-green-1400.webp" srcset="./assets/images/slider/crowd_happy_nicholas-green-1400.webp 1400w,
 						./assets/images/slider/crowd_happy_nicholas-green-700.webp 700w" sizes="100vw" class="d-block w-100 h-100"
-							alt="danse des mariés">
+							alt="danse des mariés" defer>
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp" srcset="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp 1400w,
 						./assets/images/slider/wedding_dance_edward-cisneros-700 700w" sizes="100vw" class="d-block w-100 h-100"
-							alt="danse des mariés">
+							alt="danse des mariés" defer>
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
