--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
 					<div class="carousel-item">
 						<img src="./assets/images/slider/crowd_happy_nicholas-green-1400.webp" srcset="./assets/images/slider/crowd_happy_nicholas-green-1400.webp 1400w,
 						./assets/images/slider/crowd_happy_nicholas-green-700.webp 700w" sizes="100vw" class="d-block w-100 h-100"
-							alt="danse des mariés" defer>
+							alt="danse des mariés" loading="lazy">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp" srcset="./assets/images/slider/wedding_dance_edward-cisneros-1400.webp 1400w,
 						./assets/images/slider/wedding_dance_edward-cisneros-700 700w" sizes="100vw" class="d-block w-100 h-100"
-							alt="danse des mariés" defer>
+							alt="danse des mariés" loading="lazy">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
